--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version: 1.0.6522.
+
+~ renamed the project to make clear that it's a wrapper
+
+
 Version: 1.0.6522.21215
 
 + Basic functionalities have been added
